crates/math-core/tests/snapshots/conversion_test__complicated_operatorname.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname {{\\pi} o \\pounds a}"
---
<math>
    <mrow><mspace/><mi>πo£a</mi></mrow>
</math>
