crates/math-core/tests/snapshots/conversion_test__cramped_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\cramped[]{\\frac{2}{4}}"
---
<math>
    <mrow style="math-shift:compact;">
        <mfrac>
            <mn>2</mn>
            <mn>4</mn>
        </mfrac>
    </mrow>
</math>
