crates/math-core/tests/snapshots/conversion_test__cramped_scriptscriptstyle.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\cramped[ \\scriptscriptstyle ]{{x^2}^2}"
---
<math>
    <mrow style="math-shift:compact;" displaystyle="false" scriptlevel="2">
        <msup>
            <msup>
                <mi>x</mi>
                <mn>2</mn>
            </msup>
            <mn>2</mn>
        </msup>
    </mrow>
</math>
