crates/math-core/tests/snapshots/conversion_test__cramped_textstyle.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{x^2}^2\\ \\cramped[ \\textstyle]{{x^2}^2}"
---
<math>
    <msup>
        <msup>
            <mi>x</mi>
            <mn>2</mn>
        </msup>
        <mn>2</mn>
    </msup>
    <mtext> </mtext>
    <mrow style="math-shift:compact;" displaystyle="false" scriptlevel="0">
        <msup>
            <msup>
                <mi>x</mi>
                <mn>2</mn>
            </msup>
            <mn>2</mn>
        </msup>
    </mrow>
</math>
