crates/math-core/tests/snapshots/conversion_test__cube_root.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt[3]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mn>3</mn>
    </mroot>
</math>
