crates/math-core/tests/snapshots/conversion_test__dcases.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "f(x):=\\begin{dcases}0 &\\text{if } x \\geq 0 \\\\ \\frac{1 + 1}{2} &\\text{otherwise.}\\end{dcases}"
---
<math>
    <mi>f</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mo lspace="0.2778em" rspace="0">:</mo>
    <mo lspace="0">=</mo>
    <mrow>
        <mo>{</mo>
        <mtable displaystyle="true" scriptlevel="0">
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>0</mn>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>if </mtext>
                    <mi>x</mi>
                    <mo>≥</mo>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mfrac>
                        <mrow>
                            <mn>1</mn>
                            <mo>+</mo>
                            <mn>1</mn>
                        </mrow>
                        <mn>2</mn>
                    </mfrac>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>otherwise.</mtext>
                </mtd>
            </mtr>
        </mtable>
        <mo>⁣</mo>
    </mrow>
</math>
